@@ -1,5 +1,11 @@
 2007-10-16  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/labels/AbstractXYItemLabelGenerator.java:
+	(nullXString): Removed,
+	(createItemArray): Removed check for null x-value.
+
+2007-10-16  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/category/BarRenderer3D.java
 	(drawRangeMarker): Use adjusted data area;
 	* source/org/jfree/chart/renderer/category/LineRenderer3D.java
